<resources>
    <string name="app_name">Act#10 PricelistApp SQLite</string>

    <string name="PriceList">Price List</string>
    <string name="NameProd">Name of Product</string>
    <string name="Price">Price</string>

    <string name="RadioFoodsBtn">FOODS</string>
    <string name="RadioDrinksBtn">DRINKS</string>
    <string name="RadioOtherBtn">OTHER</string>

    <string name="AddBtn">ADD</string>
    <string name="ViewBtn">VIEW ALL PRODUCTS</string>
    <string name="FoodsBtn">VIEW ALL FOODS</string>
    <string name="DrinksBtn">VIEW ALL DRINKS</string>
    <string name="OtherBtn">VIEW ALL OTHER</string>

    <string name="EditDelete">EDIT / DELETE</string>
    <string name="EditBtn">EDIT</string>
    <string name="DeleteBtn">DELETE</string>
    <string name="ID">ID: </string>
</resources>