<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgone"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/MainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/EditDelete"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="italic" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/record_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ID"
        android:gravity="center_horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/product_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/NameProd"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:gravity="center_horizontal"
        android:importantForAutofill="no" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/price_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/Price"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:gravity="center_horizontal"
        android:importantForAutofill="no" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp" />

    <Button
        android:id="@+id/btn_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/EditBtn"
        android:textColor="#000000"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/btn_delete_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/DeleteBtn"
        android:textColor="#000000"
        android:textStyle="bold" />
</LinearLayout>